link_libraries(vmc)
add_executable(ex1.exe ex1/main.cpp)
add_executable(ex2.exe ex2/main.cpp)
add_executable(ex3.exe ex3/main.cpp)
add_executable(ex4.exe ex4/main.cpp)
add_executable(ex5.exe ex5/main.cpp)
add_executable(ex6.exe ex6/main.cpp)

if(MPI_FOUND)
  add_executable(ex7.exe ex7/main.cpp)
endif()
