link_libraries(vmc)
add_executable(ex_basic.exe ex_basic/main.cpp)
add_executable(ex_cgopt.exe ex_cgopt/main.cpp)
add_executable(ex_sropt.exe ex_sropt/main.cpp)
add_executable(ex_nmsopt.exe ex_nmsopt/main.cpp)
add_executable(ex_adamopt.exe ex_adamopt/main.cpp)

if (MPI_FOUND)
    add_executable(ex_mpi.exe ex_mpi/main.cpp)
endif ()
